# imessage-api

./: .dockerignore  .gitignore  README.md  compose.dev.yml
api/: Dockerfile  package.json
api/src/: server.js
daemon/: Cargo.toml  Dockerfile
daemon/src/: main.rs
docs/: architecture.md  current-mac-provisioning.md  facetime-audio-bridge.md  new-line-checklist.md  new-line-hosted.md  new-line-mac.md  provisioning.md  railway.md  send-path.md
docs/qa/: README.md  imessage-facetime-qa.md
docs/setup/: README.md  multi-line-backend.md  new-line-checklist.md  new-line-hosted.md  new-line-mac.md  three-step-provision.md
infra/: railway-notes.md
scripts/: extract_hwconfig.swift
