[package]
name = "imessage-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
base64 = "0.22"
keystore = { path = "../vendor/rustpush/keystore" }
openssl = { version = "0.10.56", features = ["vendored"] }
plist = "1.7"
reqwest = { version = "0.12", features = ["json"] }
rustpush = { path = "../vendor/rustpush", features = ["remote-anisette-v3"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
